[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heatmap-py"
version = "0.1.0"
description = "ANSI heatmap generator"
authors = [{ name = "HumpityDumpityDumber" }]
dependencies = [
    "ansi>=0.3.7",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "requests>=2.32.5",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "openmeteo_requests>=1.7.2",
    "openmeteo_sdk>=1.21.0"
]

[project.scripts]
heatmap-py = "heatmap.cli:main"